--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,11 @@ body {
 
 ::-moz-selection { background: #33cc33; }
 
+.jumbotron{
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
 a {
     color: #6633cc;
     text-decoration: none;
@@ -76,13 +81,13 @@ p {
     font-size: 21px;
 }
 
-/*figure > img {
+figure > img {
     display: block;
-}*/
+}
 
 img {
     max-width: 100%;
-    vertical-align: middle;
+    /*vertical-align: middle;*/
 }
 
 .site-header {
