more minor fixes
padding, margins... fun times

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ p {
 .jumbotron{
 	padding-top: 0px;
 	padding-bottom: 20px;
+    margin-bottom: 0px;
 }
 
 .navbar{
@@ -55,7 +56,8 @@ p {
     padding-bottom: 10px;
 }
 
-h1, h2, h3, h4, h5, h6 { font-weight: 400; }
+h1, h2, h3, h4, h5, h6 { font-weight: 400;
+margin:none}
 
 h1 {
     font-size: 60px !important;
