--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,6 @@ p {
     margin-bottom: 0px;
 }
 
-.navbar{
-	padding-left:0%;
-	padding-top:0px;
-}
-
 .footer {
     padding-top: 25px;
     padding-bottom: 10px;
@@ -71,7 +66,6 @@ h3 { font-size: 28px !important;
 }
 
 h4 { font-size: 24px !important;
-    text-align: center;
 }
 
 h5 { font-size: 21px !important;
@@ -104,6 +98,7 @@ a:hover {
 
 .site-header {
     background: #0066cc;
+    margin: 0px;
 }
 
 .navbar-brand img {
@@ -120,6 +115,7 @@ a:hover {
     text-decoration: none !important;
     background-color: #33cc33 !important;
 }
+
 
 .navbar-menu-button{
     margin: 0px;
