--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
-body, p, h1, h2, h3, h4, h5 {
+body, h1, h2 {
     font: 400 21px/1.5 "Dosis Regular", Dosis, sans-serif;
+    color: #333333;
+}
+
+p, h3, h4, h5, h6 {
+    font: 400 21px/1.5 "Roboto", Roboto, sans-serif;
     color: #333333;
 }
 
@@ -8,7 +13,7 @@ body {
 }
 
 h1 {
-    font-size: 60px;
+    font-size: 50px;
     font-weight: 600;
 }
 
@@ -21,7 +26,7 @@ h3{
 }
 
 h4 {
-    font-size: 24px;
+    font-size: 26px;
 }
 
 h5 {
@@ -77,6 +82,10 @@ h6 { font-size: 18px !important;
 
 p {
     font-size: 21px;
+}
+
+br {
+
 }
 
 a {
