--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,6 @@ a:hover {
     background-color: #33cc33 !important;
 }
 
-
 .navbar-menu-button{
     margin: 0px;
     border: none;
@@ -140,7 +139,7 @@ a:hover {
 }
 
 .portfolio-thumbnail {
-    padding-bottom: 30px;
+    padding-bottom: 40px;
 }
 
 .img{
@@ -155,3 +154,17 @@ a:hover {
 .img-hover img:hover {
     opacity: .35;
 }
+
+/*.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}*/
+
+/*.hovertext {
+    color: #0066cc;
+}*/
