--- a/css/style.css
+++ b/css/style.css
@@ -75,8 +75,14 @@ a:hover {
     padding-top: 55px;
 }
 
+.page-header{
+    padding-top: 55px;
+    line-height: 1.15;
+}
+
 .header-title {
     color:#33cc33;
+    margin-left: 7px;
 }
 
 .site-header {
@@ -87,6 +93,7 @@ a:hover {
 .navbar-brand img {
     width: 40%;
     vertical-align: middle;
+    padding-top: 0px;
 }
 
 .navbar-default .navbar-nav > li > a {
@@ -101,6 +108,7 @@ a:hover {
 
 .navbar-menu-button{
     margin: 0px;
+    padding-bottom: 0px;
     border: none;
     vertical-align: middle;
 }
@@ -117,6 +125,10 @@ a:hover {
 	border-style: solid;
 	border-color: black;
     box-shadow: 4px 4px 16px rgba(0, 0, 0, .1);
+}
+
+.job{
+    line-height: 2;
 }
 
 .overlay {
